--- a/style.scss
+++ b/style.scss
@@ -16,6 +16,9 @@ body {
     background-repeat: no-repeat;
     background-position: left -15px top 20px;
 
+
+
+
     .header {
         position: fixed;
         top: 0;
@@ -86,7 +89,11 @@ body {
             transform: translateX(0%);
         }
 
-        @media screen and (max-width: 770px) {
+        @media screen and (max-width: 992px) {
+            .header__row {
+                justify-content: space-between;
+            }
+            
             .main-nav {
                 margin-top: 0px;
             }
@@ -181,22 +188,12 @@ body {
 
         @media only screen and (max-width:992px) {
             .row {
-                padding-right: calc(var(--bs-gutter-x) * .5);
-                padding-left: calc(var(--bs-gutter-x) * .5);
-                justify-content: center;
-                align-items: center;
                 gap: 40px;
-                
-                .home-page__title_photo {
-                    width: 100%;
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-                    align-items: center;
-                }
+
+                .home-page__title_photo {}
 
                 .btn-switch {
-                    justify-content: flex-start;
+                    left: 0px;
                 }
             }
         }
@@ -223,5 +220,11 @@ body {
         width: 277px;
         height: 53px;
         border: 2px solid #FFFFFF;
+    }
+}
+
+@media only screen and (max-width:992px) {
+    body {
+        display: flex;
     }
 }
