--- a/style.scss
+++ b/style.scss
@@ -12,12 +12,6 @@
 body {
     background-color: #132F59;
     position: relative;
-    background-image: url(img/Rectangle\ 7.svg);
-    background-repeat: no-repeat;
-    background-position: left -15px top 20px;
-
-
-
 
     .header {
         position: fixed;
@@ -93,7 +87,7 @@ body {
             .header__row {
                 justify-content: space-between;
             }
-            
+
             .main-nav {
                 margin-top: 0px;
             }
@@ -123,6 +117,22 @@ body {
             position: relative;
             z-index: 1;
             margin-top: 200px;
+
+            .svg {
+                position: absolute;
+                top: -180px;
+                left: -110px;
+            }
+
+            .line-for-btn {
+                position: absolute;
+                left: 0px;
+                top: 330px;
+                width: 100px;
+                height: 100px;
+                border-bottom: 1px solid #FFFFFF;
+                border-left: 1px solid #FFFFFF;
+            }
         }
 
         p {
@@ -194,6 +204,11 @@ body {
 
                 .btn-switch {
                     left: 0px;
+                }
+
+                .line-for-btn {
+                    top: 215px;
+                    left: -10px;
                 }
             }
         }
