--- a/style.scss
+++ b/style.scss
@@ -3,13 +3,15 @@
     src: url(fonts/nasalization-rg.otf);
 }
 
-
 * {
     margin: 0px;
     padding: 0px;
 }
 
 body {
+    background-image: url(img/Rectangle\ 3.png);
+    background-repeat: no-repeat;
+    background-position: top 300px right 0;
     background-color: #132F59;
     position: relative;
 
@@ -143,7 +145,6 @@ body {
             font-family: 'Roboto Flex';
             font-style: normal;
             font-weight: 400;
-            font-size: 26px;
             line-height: 28px;
             color: #FFFFFF;
             letter-spacing: 0.08em;
@@ -159,8 +160,6 @@ body {
 
         &__title_photo {
             position: relative;
-            width: 873px;
-            height: 552px;
 
             .fade {
                 animation-name: fade;
@@ -182,6 +181,13 @@ body {
             }
 
             .slide {
+                background-size: cover;
+                background-image: url(img/lance.png);
+
+                img {
+                    object-fit: cover;
+                }
+
                 display: none;
             }
 
@@ -197,22 +203,6 @@ body {
                 border: none;
             }
         }
-
-        @media only screen and (max-width:992px) {
-            .row {
-                gap: 40px;
-
-                .btn-switch {
-                    left: 0px;
-                }
-
-                .line-for-btn {
-                    top: 215px;
-                    left: -10px;
-                }
-            }
-        }
-
     }
 
     .about {
@@ -279,7 +269,7 @@ body {
             position: relative;
 
             &__line {
-                right: 0px;
+                right: 12px;
                 position: absolute;
                 width: 100px;
                 height: 100px;
@@ -321,17 +311,13 @@ body {
                 }
             }
         }
-
-
-
-
     }
 
     .title-section {
         font-family: 'Nasalization';
         font-style: normal;
         font-weight: 400;
-        font-size: 84px;
+        // font-size: calc(70px + 10 * (100vw / 1280));
         line-height: 100px;
         letter-spacing: 0.08em;
         color: #FFFFFF;
@@ -349,11 +335,32 @@ body {
         border: 2px solid #FFFFFF;
     }
 
-    @media only screen and (max-width:992px) {
-        .about {
-            width: 100%;
-            margin-top: 0px;
+}
+
+@media only screen and (max-width:1200px) {
+    .about {
+        width: 100%;
+        margin-top: 0px;
+
+        &__line-right {
+            display: none;
         }
+
+        &__line-left {
+            display: none;
+        }
+    }
+
+    .slide {
+        width: auto;
+        height: 600px;
+    }
+}
+
+@media only screen and (min-width:1200px) {
+    .slide {
+        width: 800px;
+        height: 600px;
     }
 }
 
@@ -361,6 +368,31 @@ body {
     body {
         display: flex;
         flex-direction: column;
-        align-items: baseline;
+
+        .row {
+
+            .btn-switch {
+                left: 0px;
+            }
+
+            .line-for-btn {
+                top: 215px;
+                left: -10px;
+            }
+        }
+    }
+}
+
+@media only screen and (min-width:200px) and (max-width:600px) {
+    .title-section {
+        font-size: 50px;
+    }
+
+    .home-page p {
+        font-size: 18px;
+    }
+
+    .home-page__title_photo {
+        margin-top: 40px;
     }
 }
