--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
 @font-face {
   font-family: "Nasalization";
   src: url(fonts/nasalization-rg.otf);
@@ -241,7 +242,7 @@ body .about .about-bg2__img {
   display: flex;
 }
 body .about .about-bg2__img img {
-  width: 398px;
+  width: 380px;
   height: 592px;
 }
 body .about .about-bg2 p {
@@ -262,6 +263,59 @@ body .about .about-bg2__text2_strong-text {
   font-weight: 1000;
   font-size: 30px;
   line-height: 42px;
+}
+body .work {
+  position: relative;
+  background-color: #132F59;
+  margin-top: 100px;
+}
+body .work .work-bg {
+  background-image: url(img/work.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  right: 0px;
+  top: -50px;
+  position: absolute;
+  width: 870px;
+  height: 1002px;
+}
+body .work .title-section {
+  margin-bottom: 80px;
+}
+body .work__item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 100px;
+}
+body .work__item_id {
+  height: 130px;
+  padding-right: 20px;
+  border-right: 2px solid #FFFFFF;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 86px;
+  line-height: 101px;
+  color: #FFFFFF;
+}
+body .work__item_text {
+  padding-left: 20px;
+}
+body .work__item_text_title {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  line-height: 49px;
+  color: #EEF5FF;
+}
+body .work__item_text p {
+  font-family: "Roboto Flex";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 28px;
+  color: #FFFFFF;
 }
 body .title-section {
   font-family: "Nasalization";
@@ -330,6 +384,9 @@ body .btn {
   }
 }
 @media only screen and (min-width: 200px) and (max-width: 600px) {
+  .work__item_text_title {
+    font-size: 30px;
+  }
   .title-section {
     font-size: 50px;
   }
@@ -341,6 +398,9 @@ body .btn {
   }
 }
 @media only screen and (min-width: 601px) {
+  .work__item_text_title {
+    font-size: 42px;
+  }
   .title-section {
     font-size: 80px;
   }
