--- a/style.scss
+++ b/style.scss
@@ -3,6 +3,8 @@
     src: url(fonts/nasalization-rg.otf);
 }
 
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
+
 * {
     margin: 0px;
     padding: 0px;
@@ -283,7 +285,7 @@ body {
                 display: flex;
 
                 img {
-                    width: 398px;
+                    width: 380px;
                     height: 592px;
                 }
             }
@@ -309,6 +311,68 @@ body {
                     font-weight: 1000;
                     font-size: 30px;
                     line-height: 42px;
+                }
+            }
+        }
+    }
+
+    .work {
+        position: relative;
+        background-color: #132F59;
+        margin-top: 100px;
+
+        .work-bg {
+            background-image: url(img/work.png);
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+            right: 0px;
+            top: -50px;
+            position: absolute;
+            width: 870px;
+            height: 1002px;
+        }
+
+        .title-section {
+            margin-bottom: 80px;
+        }
+
+        &__item {
+            display: flex;
+            align-items: center;
+            margin-bottom: 100px;
+
+            &_id {
+                height: 130px;
+                padding-right: 20px;
+                border-right: 2px solid #FFFFFF;
+                font-family: 'Roboto';
+                font-style: normal;
+                font-weight: 700;
+                font-size: 86px;
+                line-height: 101px;
+                color: #FFFFFF;
+            }
+
+            &_text {
+                padding-left: 20px;
+
+                &_title {
+                    font-family: 'Roboto';
+                    font-style: normal;
+                    font-weight: 700;
+
+                    line-height: 49px;
+                    color: #EEF5FF;
+                }
+
+                p {
+                    font-family: 'Roboto Flex';
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: 24px;
+                    line-height: 28px;
+                    color: #FFFFFF;
                 }
             }
         }
@@ -387,7 +451,7 @@ body {
         top: 330px;
     }
 
-    
+
 
     .about {
         &__line-left {
@@ -403,6 +467,10 @@ body {
 }
 
 @media only screen and (min-width:200px) and (max-width:600px) {
+    .work__item_text_title {
+        font-size: 30px;
+    }
+
     .title-section {
         font-size: 50px;
     }
@@ -417,6 +485,10 @@ body {
 }
 
 @media only screen and (min-width:601px) {
+    .work__item_text_title {
+        font-size: 42px;
+    }
+
     .title-section {
         font-size: 80px;
     }
@@ -429,4 +501,3 @@ body {
         margin-top: 40px;
     }
 }
-
