--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
 body {
   background-image: url(img/Rectangle\ 3.png);
   background-repeat: no-repeat;
+  background-size: 106%;
   background-position: top 300px right 0;
   background-color: #132F59;
   position: relative;
@@ -266,6 +267,7 @@ body .about .about-bg2__text2_strong-text {
   line-height: 42px;
 }
 body .work {
+  overflow: hidden;
   position: relative;
   background-color: #132F59;
   margin-top: 100px;
@@ -284,10 +286,23 @@ body .work .work-bg {
 body .work .title-section {
   margin-bottom: 80px;
 }
+body .work .item-id {
+  position: relative;
+}
+body .work .item-id .line-item-left {
+  position: absolute;
+  top: -40px;
+  right: 0px;
+  border-right: 2px solid #FFFFFF;
+  border-top: 2px solid #FFFFFF;
+  width: 900px;
+  height: 100px;
+}
 body .work__item {
   display: flex;
   align-items: center;
   margin-bottom: 100px;
+  position: relative;
 }
 body .work__item_id {
   height: 130px;
@@ -301,7 +316,17 @@ body .work__item_id {
   color: #FFFFFF;
 }
 body .work__item_text {
+  position: relative;
   padding-left: 20px;
+}
+body .work__item_text .line-item-rifht {
+  position: absolute;
+  left: -2px;
+  top: -40px;
+  border-left: 2px solid #FFFFFF;
+  border-top: 2px solid #FFFFFF;
+  width: 900px;
+  height: 100px;
 }
 body .work__item_text_title {
   font-family: "Roboto";
@@ -389,7 +414,7 @@ body .btn {
 }
 @media only screen and (min-width: 200px) and (max-width: 600px) {
   .work__item_text_title {
-    font-size: 30px;
+    font-size: 27px;
   }
   .title-section {
     font-size: 50px;
