--- a/style.scss
+++ b/style.scss
@@ -410,10 +410,36 @@ body {
     }
 
     .servis {
-        margin-top: 200px;
+        margin-top: 100px;
         overflow-x: clip;
 
-        .item {
+        .items-right {
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            align-items: end;
+
+            .servis__item {
+                position: absolute;
+                left: 0px;
+                top: 30px;
+            }
+        }
+
+        .items-left {
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            align-items: start;
+
+            .servis__item {
+                position: absolute;
+                right: 0px;
+                top: 30px;
+            }
+        }
+
+        .items {
             margin-left: auto;
             margin-right: auto;
         }
@@ -424,12 +450,6 @@ body {
             gap: 100px;
         }
 
-        &__img {
-            img {
-                width: 1015px;
-            }
-        }
-
         &__item {
             padding: 20px;
             display: flex;
@@ -438,8 +458,6 @@ body {
             align-items: start;
             gap: 20px;
             position: relative;
-            width: 583px;
-            height: 219px;
             background-color: #FFFFFF;
             z-index: 1;
 
@@ -478,6 +496,63 @@ body {
         }
     }
 
+    .about-us {
+        position: relative;
+        margin-top: 100px;
+
+        &__items {
+            margin-top: 100px;
+            position: relative;
+            padding-top: 40px;
+            padding-left: 30px;
+            padding-right: 30px;
+            padding-bottom: 40px;
+            border-top: 3px solid #fff;
+            border-right: 3px solid #fff;
+            border-bottom: 3px solid #fff;
+        }
+
+        &__img {
+            background-image: url(img/about-us.png);
+            background-position: center;
+            background-repeat: no-repeat;
+            height: 779px;
+        }
+
+        &__item {
+            .line-about-us {
+                position: absolute;
+                bottom: 0px;
+                left: 0px;
+                width: 0px;
+                height: 80px;
+                border-right: 3px solid #FFFFFF;
+            }
+
+            margin-bottom: 60px;
+
+            &_title {
+                display: inline-block;
+                font-family: 'Roboto';
+                font-style: normal;
+                font-weight: 700;
+                font-size: 24px;
+                line-height: 28px;
+                color: #FFFFFF;
+                border-bottom: 1px solid #FFFFFF;
+            }
+
+            p {
+                font-family: 'Roboto Flex';
+                font-style: normal;
+                font-weight: 400;
+                font-size: 18px;
+                line-height: 21px;
+                color: #FFFFFF;
+            }
+        }
+    }
+
     .title-section {
         font-family: 'Nasalization';
         font-style: normal;
@@ -503,6 +578,14 @@ body {
 }
 
 @media only screen and (max-width:1200px) {
+    .items-left {
+        .servis__item {
+            position: absolute;
+            left: 0px;
+            top: 30px;
+        }
+    }
+
     .slide {
         width: 100%;
     }
@@ -510,15 +593,35 @@ body {
     .about {
         margin-top: 0px;
     }
+
+    .servis {
+        &__item {
+            max-width: 583px;
+            min-height: 219px;
+        }
+    }
 }
 
 @media only screen and (min-width:1201px) {
     .slide {
         width: 100%;
     }
+
+    .servis {
+        &__item {
+            width: 583px;
+            height: 219px;
+        }
+    }
 }
 
 @media only screen and (max-width:992px) {
+
+    .about-us {
+        &__img {
+            width: 100%;
+        }
+    }
 
     .about-bg2__img {
         justify-content: center;
@@ -550,12 +653,21 @@ body {
 }
 
 @media only screen and (min-width:993px) {
+
+    .about-us__items {
+        margin-left: 60px;
+    }
+
     .line-for-btn {
         left: 0px;
         top: 330px;
     }
 
-
+    .about-us {
+        &__img {
+            width: 560px;
+        }
+    }
 
     .about {
         &__line-left {
@@ -568,6 +680,7 @@ body {
             bottom: 0px;
         }
     }
+
 }
 
 @media only screen and (min-width:200px) and (max-width:600px) {
